major rehaul:  - gradle 9 compatible  - dropped enterprise publishing  - improved MPS caching